--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "lucide-react": "^0.525.0",
     "next": "15.4.1",
     "react": "19.1.0",
+    "react-charts": "3.0.0-beta.57",
     "react-dom": "19.1.0",
     "tailwind-merge": "^3.3.1"
   },
